// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptProductSizes() should return a product sizes adapter object for a product with two sizes available and variants: product with two sizes and variants adapter 1`] = `
Array [
  Object {
    "globalQuantity": 40,
    "id": 20,
    "isOneSize": false,
    "isOutOfStock": false,
    "name": "S",
    "scale": 115,
    "scaleAbbreviation": "IT",
    "scaleDescription": "Clothing standard",
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": 0,
        "quantity": 20,
      },
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10002,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 20,
      },
    ],
  },
  Object {
    "globalQuantity": 10,
    "id": 21,
    "isOneSize": false,
    "isOutOfStock": false,
    "name": "M",
    "scale": 115,
    "scaleAbbreviation": "IT",
    "scaleDescription": "Clothing standard",
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 10,
      },
    ],
  },
]
`;

exports[`adaptProductSizes() should return a product sizes adapter object for a product with two sizes available: product with two sizes adapter 1`] = `
Array [
  Object {
    "globalQuantity": 40,
    "id": 20,
    "isOneSize": false,
    "isOutOfStock": false,
    "name": "S",
    "scale": 115,
    "scaleAbbreviation": "IT",
    "scaleDescription": undefined,
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 20,
      },
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10002,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 20,
      },
    ],
  },
  Object {
    "globalQuantity": 10,
    "id": 21,
    "isOneSize": false,
    "isOutOfStock": false,
    "name": "M",
    "scale": 115,
    "scaleAbbreviation": "IT",
    "scaleDescription": undefined,
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 10,
      },
    ],
  },
]
`;

exports[`adaptProductSizes() should return the product sizes adapter object for a product which has a size out of stock: out of stock product adapter 1`] = `
Array [
  Object {
    "globalQuantity": 0,
    "id": 17,
    "isOneSize": true,
    "isOutOfStock": true,
    "name": "One Size",
    "scale": 14,
    "scaleAbbreviation": undefined,
    "scaleDescription": undefined,
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 0,
      },
    ],
  },
]
`;

exports[`adaptProductSizes() should return the product sizes adapter object for a product with one size only: one size product adapter 1`] = `
Array [
  Object {
    "globalQuantity": 10,
    "id": 17,
    "isOneSize": true,
    "isOutOfStock": false,
    "name": "One Size",
    "scale": 14,
    "scaleAbbreviation": undefined,
    "scaleDescription": undefined,
    "stock": Array [
      Object {
        "barcodes": Array [
          "23123423435365",
        ],
        "merchantId": 10001,
        "price": Object {
          "formatted": Object {
            "includingTaxes": "€ 100.00",
            "includingTaxesWithoutDiscount": "€ 100.00",
          },
        },
        "purchaseChannel": null,
        "quantity": 10,
      },
    ],
  },
]
`;

exports[`composePurchaseChannels() should generate an object with composed key and purchase channels related to the provided variants: composed product purchase channels object 1`] = `
Object {
  "20#115#10001": 0,
  "21#115#10002": 1,
}
`;

exports[`getAttributesBySizeId() should return the right attributes according to the provided variant: size 20/S variants adapter 1`] = `
Object {
  "Scale": "115",
  "ScaleAbbreviation": "IT",
  "ScaleDescription": "Clothing standard",
  "Size": "20",
  "SizeDescription": "S",
}
`;
